tests/ui/type-inference/issue-30225.stderr
error[E0308]: mismatched types
  --> $DIR/issue-30225.rs:31:9
   |
LL |     u = v; // mark $0 and $1 in a subtype relationship
   |         ^ expected `A`, found `B`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
